==============
lxml changelog
==============

Latest changes
==================

Bugs fixed
----------

* Some file I/O tests were failing in MS-Windows due to incorrect temp file
  usage.  Initial patch by Gabi Davar.

* LP#910014: duplicate IDs in a document were not reported by DTD validation.

* LP#1185332: ``tostring(method="html")`` did not use HTML serialisation
  semantics for trailing tail text.  Initial patch by Sylvain Viollon.

* LP#1281139: ``.attrib`` value of Comments lost its mutation methods
  in 3.3.0.  Even though it is empty and immutable, it should still
  provide the same interface as that returned for Elements.


3.3.1 (2014-02-12)
==================

Features added
--------------

Bugs fixed
----------

* LP#1014290: HTML documents parsed with ``parser.feed()`` failed to find
  elements during tag iteration.

* LP#1273709: Building in PyPy failed due to missing support for
  ``PyUnicode_Compare()`` and ``PyByteArray_*()`` in PyPy's C-API.

* LP#1274413: Compilation in MSVC failed due to missing "stdint.h" standard
  header file.

* LP#1274118: iterparse() failed to parse BOM prefixed files.

Other changes
-------------


3.3.0 (2014-01-26)
==================

Features added
--------------

Bugs fixed
----------

* The heuristic that distinguishes file paths from URLs was tightened
  to produce less false negatives.

Other changes
-------------


3.3.0beta5 (2014-01-18)
=======================

Features added
--------------

* The PEP 393 unicode parsing support gained a fallback for wchar strings
  which might still be somewhat common on Windows systems.

Bugs fixed
----------

* Several error handling problems were fixed throughout the code base that
  could previously lead to exceptions being silently swallowed or not
  properly reported.

* The C-API function ``appendChild()`` is now deprecated as it does not
  propagate exceptions (its return type is ``void``).  The new function