@@ -334,7 +334,7 @@ class LXMLOutputChecker(OutputChecker):
                 attrs.append('-%s="%s"' % (name, self.format_text(value, False)))
             else:
                 if name in want.attrib:
-                    text = self.collect_diff_text(value, want.attrib[name], False)
+                    text = self.collect_diff_text(want.attrib[name], value, False)
                 else:
                     text = self.format_text(value, False)
                 attrs.append('%s="%s"' % (name, text))
